# genomic_ml_production_learning

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  genomic_ML_workflow_instructions.md  pyproject.toml  workflow_progress.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: api.md  modeling.md
examples/: predict_example.json
models/: baseline.pkl
scripts/: evaluate_model.py  train_model.py
sql/: create_tables.sql  data_retrieval.sql  model_run_summary.sql  prediction_queries.sql  queries_for_evaluation.sql
src/genomics_ml/: __init__.py
src/genomics_ml/api/: main.py
src/genomics_ml/data/: load_data.py  validation.py
src/genomics_ml/features/: preprocessing.py
src/genomics_ml/models/: model_utils.py  predict.py  train.py
src/genomics_ml/utils/: config.py  database.py  logging.py
tests/: conftest.py  test_api.py  test_config.py  test_preprocessing.py  test_training.py
