[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genomics-ml"
version = "0.1.0"
description = "Production-style genomics ML pipeline"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "mlflow>=2.10",
    "fastapi>=0.100",
    "uvicorn>=0.25",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
